# 2025-1-AISP-Demo

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  scrapy-playwright의 FEED_EXPORT_FIELDS=[_ranking_,.md
csv/: box_office_ranking.csv  comments.csv  netflix_ranking.csv  ranking.csv  watcha_ranking.csv
dev/: configurator.bat
dev/models/: script.ipynb  script.py
home/: detail.py  index.py  run_home.py
module/watcha_pedia_crawler/: comments_crawler.py  rankings_crawler.py
module/watcha_pedia_scraper/: run_comments_scraper.py  run_ranking_scraper.py  run_rankings_scraper.py
scrpy_plwrt_demo/: items.py  pipelines.py  settings.py  utils.py
scrpy_plwrt_demo/spiders/: comments.py  netflix_ranking.py  nike_shoe.py  ranking.py  rankings.py  riss.py  watcha_ranking.py
