[project]
name = "2025-1-aisp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kobert-transformers>=0.6.0",
    "konlpy>=0.6.0",
    "matplotlib>=3.10.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "scrapy-playwright==0.0.43",
    "streamlit==1.43.2",
    "streamlit-option-menu>=0.4.0",
    "tf-keras>=2.19.0",
    "torch==2.6.0",
    "transformers==4.50.3",
]
